chore(FramedImageHeader): fix image cut off at the bottom for desktop

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_landingPage.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_landingPage.scss
@@ -8,6 +8,7 @@
         display: flex;
         height: 100%;
         color: white;
+        justify-content: center;
 
         &--teal {
             background-color: $teal;
@@ -19,23 +20,35 @@
     }
 
     &__text {
-        float: left;
-        width: 50%;
-        margin-top: 1em;
+        width: 40%;
+        margin-top: 5em;
     }
 
     &__container {   
-        float: right;
-        width: 500px;
+        width: 30vw;
+        height: 30vw;
+        background-color: $stockport-dark-grey;
+        overflow: hidden;
+        position: relative;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
+            position: absolute;
+            bottom: -30px;
+        }
+
     }
 
     &__title {
         color: white;
     }
 
-    &__image {
-        width: 100%;
-        height: auto;
-        clip-path: circle(40% at 50% 68%);
-    }
+    // &__image {
+    //     width: 100%;
+    //     height: auto;
+    //     clip-path: circle(40% at 50% 68%);
+    // }
 }
